WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175783
Persistent WebGL Warning "vertex WARNING: 0:1: extension 'GL_ARB_gpu_shader5' is not supported" in Safari 10.1.2
https://bugs.webkit.org/show_bug.cgi?id=175783
Summary
Persistent WebGL Warning "vertex WARNING: 0:1: extension 'GL_ARB_gpu_shader5'...
Dean Jackson
Reported
2017-08-21 14:22:10 PDT
Persistent WebGL Warning "vertex WARNING: 0:1: extension 'GL_ARB_gpu_shader5' is not supported" in Safari 10.1.2
Attachments
Patch
(5.91 KB, patch)
2017-08-21 14:30 PDT
,
Dean Jackson
achristensen
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2017-08-21 14:23:54 PDT
<
rdar://problem/33623867
>
Dean Jackson
Comment 2
2017-08-21 14:30:26 PDT
Created
attachment 318675
[details]
Patch
Dean Jackson
Comment 3
2017-08-21 14:52:17 PDT
Committed
r220983
: <
http://trac.webkit.org/changeset/220983
>
Ross Kirsling
Comment 4
2017-08-21 14:59:23 PDT
Seems like this was a duplicate of
https://bugs.webkit.org/show_bug.cgi?id=171054
? :D
Don Olmstead
Comment 5
2017-08-22 10:44:16 PDT
***
Bug 171054
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug