Persistent WebGL Warning "vertex WARNING: 0:1: extension 'GL_ARB_gpu_shader5' is not supported" in Safari 10.1.2 https://bugs.webkit.org/show_bug.cgi?id=175783 <rdar://problem/33623867>

Reviewed by Alex Christensen.

Source/WebCore:

The version of ANGLE we use inserts this line into each shader:
It causes our lower-level GLSL compiler to give a warning, which is
confusing to developers because they didn't write this code.

Until we upgrade our OpenGL support to version 4.1, we should remove
this error message from the log returned to the developer.
See https://bugs.webkit.org/show_bug.cgi?id=175785

Test: fast/canvas/webgl/no-info-log-for-simple-shaders.html

* platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:
(WebCore::GraphicsContext3D::getUnmangledInfoLog): Search for and remove
this warning.

LayoutTests:

* fast/canvas/webgl/no-info-log-for-simple-shaders-expected.txt: Added.
* fast/canvas/webgl/no-info-log-for-simple-shaders.html: Added.

Canonical link: https://commits.webkit.org/192442@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220983 268f45cc-cd09-0410-ab3c-d52691b4dbfc